ADD navbar with responsive view

--- a/assets/sass/custom/base/_colors.scss
+++ b/assets/sass/custom/base/_colors.scss
@@ -20,26 +20,18 @@ $gray-d: #dddddd;
 $gray-e: #eeeeee;
 $white: #ffffff;
 
-
-// Color Shades
-$theme-primary: #0d2366;
-$theme-primary-bg-dark: #185fc0;
-$theme-primary-bg-light: #4597db;
-$theme-secondary: #515978;
-$theme-info: #9c6dff;
-$theme-warning: #FF8238;
-$theme-info-bg: #ff8a8a;
-$theme-success: #49dab5;
-$theme-success-bg: #F2FFF4;
-$theme-danger: #f96464;
-$theme-danger-bg: #FFF5F5;
-$theme-blue: #528ff0;
-$theme-checkmark: #0bffc1;
-$theme-footer-text: #6f7691;
-
 // Theme specific colors
-$theme-primary: #EB1D22;
-$theme-bg: #F6F6F6;
-$theme-cardbg: #D8D8D8;
-$theme-text: #101010;
+$theme-primary: #3549af;
+$theme-bg: #f9f9f9;
+$theme-card-bg: #D8D8D8;
+$theme-text-primary: #707070;
+$theme-text-secondary: #707070;
+$theme-text-light: #343434;
+$theme-badge: #f2799a;
+$theme-info: #f7a661;
+$theme-info-bg: #ffb100;
+$theme-warning: #FF8238;
+$theme-success: #5cd029;
+$theme-danger: #d85252;
+$theme-badge-bg: #52B9F0;
 
