--- a/assets/sass/custom/layout/_header.scss
+++ b/assets/sass/custom/layout/_header.scss
@@ -2,27 +2,150 @@
 // ## HEADER.SCSS ## //
 // ######################################## //
 
-// header mobile
-.nav {
+// navbar
+.navbar {
+    padding: 10px 50px;
+    background: $white;
 
-    // nav-item
-    .nav-item {
-        width: 50%;
+    // On mobile
+    @include mobile {
+        padding: 10px;
+    }
+}
+
+// logo
+.navbar-logo {
+    width: 90px;
+}
+.navbar-toggler {
+    border: none;
+
+    &:focus {
+        outline: none;
+    }
+}
+
+
+// search section
+.searchbar-sec {
+    flex: 1;
+    justify-content: center;
+
+    // On mobile
+    @include mobile {
+        display: -webkit-box;
+        padding-top: 25px;
     }
 
-    // text
-    .nav-link {       
-        text-align: center;
-        border-radius: 0;
-        border: none;
-        color: $black;
-        background-color: $white;
-        
+    // form-group
+    .form-group {
+        margin: 0;
+    }
 
-        &.active {
-            color: $white;
-            background-color: $theme-primary;
+    // search
+    .form-control.navbar-search-select {
+        font-size: 14px;
+        color: $black;
+        background: #f3f3f3;
+        border-radius: 8px;
+        border: 1px solid rgba($gray-d, 0.8);
+        width: 100px;
+
+        // focus
+        &:focus {
+            outline: none;
+            box-shadow: none;
         }
     }
+
+    // search group
+    .navbar-search-group {
+        display: flex;
+        flex: 0.8;
+    }
+
+    // searchbar
+    .form-control.navbar-search {
+        font-size: 14px;
+        flex: 1;
+        border-radius: 0;
+        border-width: 1px 1px 1px 0;
+    }
+
+    // icon
+    .navabr-search-icon {
+        height: 38px;
+        background: transparent;
+        padding: 0 12px;
+        color: $gray-7;
+    }
+}
+
+// right-sec
+.navbar-right {
+    align-items: center;
+    flex: 0.3;
+    justify-content: space-between;
+
+    // On mobile
+    @include mobile {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 25px;
+    }
+
+    // select-flag
+    .select-flag {
+        border: none;
+        font-size: 14px;
+        width: 60px;
+
+        // On mobile
+        @include mobile {
+            width: auto;
+            padding: 0;
+        }
+    }
+
+    // notification icon
+    .notification-icon {
+
+        // icon
+        i {
+            font-size: 20px;
+            color: $gray-7;
+        }
+    }
+
+    // profile-sec
+    .profile-sec {
+
+    // user bg
+    .user-pic {
+        background: $gray-e;
+        border-radius: 50%;
+        padding: 4px;
+    }
+
+    // user
+    .user {
+        width: 30px;
+        height: 30px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center; 
+    }
+
+    // dropdown
+    .dropdown {}
+
+    // toggle
+    .dropdown-toggle {
+        font-size: 14px;
+        color: $black;
+        padding-left: 10px;
+    }
+}
 
 }
