--- a/assets/sass/custom/styles.scss
+++ b/assets/sass/custom/styles.scss
@@ -11,9 +11,10 @@
 @import "helpers/mixins";
 
 // Components
-@import "components/carousels";
 @import "components/buttons";
+@import "components/badge";
 @import "components/cards";
+@import "components/animation";
 
 // Extras
 @import "layout/xtras";
