--- a/assets/sass/custom/base/_fonts.scss
+++ b/assets/sass/custom/base/_fonts.scss
@@ -2,10 +2,59 @@
 // ## FONTS.SCSS ## //
 // ######################################## //
 
-  @font-face {
-    font-family: 'lato';
-    src: url('../fonts/lato');
-    src: url('../fonts/lato/lato-regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
+  /* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Light'), local('Lato-Light'), url('../fonts/Lato/Lato-Light.ttf') format('woff2');
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Light'), local('Lato-Light'), url('../fonts//Lato/Lato-Light.ttf') format('woff2');
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url('../fonts//Lato/Lato-Regular.ttf') format('woff2');
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url('../fonts//Lato/Lato-Regular.ttf') format('woff2');
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Lato Bold'), local('Lato-Bold'), url('../fonts//Lato/Lato-Bold.ttf') format('woff2');
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Lato Bold'), local('Lato-Bold'), url('../fonts//Lato/Lato-Bold.ttf') format('woff2');
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Lato Black'), local('Lato-Black'), url('../fonts//Lato/Lato-Black.ttf') format('woff2');
+}
+/* latin */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Lato Black'), local('Lato-Black'), url('../fonts//Lato/Lato-Black.ttf') format('woff2');
+}
