ADD first cards css

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7009,38 +7009,46 @@ a.text-dark:hover, a.text-dark:focus {
   font-weight: 900;
   src: local("Lato Black"), local("Lato-Black"), url("../fonts//Lato/Lato-Black.ttf") format("woff2"); }
 
-.bltri {
+.badge-primary {
+  background: #3549af;
+  color: #ffffff; }
+
+.badge-seller {
   position: relative;
   background: #5cd029;
-  color: white;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 500;
   padding: 5px 20px;
   width: 150px;
   text-transform: uppercase; }
+  .badge-seller:before {
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 100%;
+    left: 0px;
+    border-top: 15px solid #2DAC5E;
+    border-left: 15px solid transparent; }
+  .badge-seller:after {
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 0px;
+    right: -3px;
+    border-bottom: 30px solid white;
+    border-left: 8px solid #2DAC5E;
+    -webkit-transform: rotateZ(15deg);
+    -ms-transform: rotate(15deg);
+    transform: rotateZ(15deg); }
 
-.bltri:before {
-  content: '';
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: 100%;
-  left: 0px;
-  border-top: 15px solid #2DAC5E;
-  border-left: 15px solid transparent; }
-
-.bltri:after {
-  content: '';
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: 0px;
-  right: -3px;
-  border-bottom: 30px solid white;
-  border-left: 8px solid #2DAC5E;
-  -webkit-transform: rotateZ(15deg);
-  -ms-transform: rotate(15deg);
-  transform: rotateZ(15deg); }
+.badge-text {
+  font-size: 10px;
+  font-weight: 700;
+  padding: 5px 12px;
+  margin-right: 5px; }
 
 @-webkit-keyframes up-right {
   0% {
@@ -10877,8 +10885,12 @@ html {
       .navbar-right .select-flag {
         width: auto;
         padding: 0; } }
+    .navbar-right .select-flag:focus {
+      outline: none;
+      -webkit-box-shadow: none;
+      box-shadow: none; }
   .navbar-right .notification-icon i {
-    font-size: 20px;
+    font-size: 26px;
     color: #777777; }
   .navbar-right .profile-sec .user-pic {
     background: #eeeeee;
@@ -10894,6 +10906,75 @@ html {
     font-size: 14px;
     color: #000000;
     padding-left: 10px; }
+
+.card-search {
+  border: none;
+  background: #ffffff;
+  padding: 43px 37px; }
+  .card-search .card-body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .card-search .left-card-body .card-info {
+    font-weight: 700;
+    border-right: 1px solid rgba(112, 112, 112, 0.16);
+    padding: 0 30px; }
+    .card-search .left-card-body .card-info:last-child {
+      border-right: none; }
+  .card-search .card-gray-text {
+    font-size: 14px;
+    color: #afafaf;
+    margin-bottom: 2px; }
+  .card-search .card-title {
+    font-size: 30px;
+    color: #000000;
+    font-weight: 700;
+    margin-bottom: 2px; }
+  .card-search .card-text {
+    font-size: 12px;
+    color: #000000; }
+  .card-search .select-box {
+    margin-top: 18px; }
+    .card-search .select-box .form-control {
+      border: 2px solid #3549af;
+      width: 80px;
+      color: #3549af; }
+    .card-search .select-box .container1 {
+      margin-right: 20px; }
+  .card-search .badge-sec {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-top: 10px; }
+    .card-search .badge-sec .icon {
+      color: #d85252;
+      border: 1px solid #d85252;
+      padding: 5px;
+      border-radius: 2px;
+      height: 15px;
+      width: 15px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .card-search .badge-sec .icon i {
+        font-size: 20px; }
 
 /*!
  * animate.css -http://daneden.me/animate
