--- a/assets/sass/custom/base/_colors.scss
+++ b/assets/sass/custom/base/_colors.scss
@@ -23,10 +23,9 @@ $white: #ffffff;
 // Theme specific colors
 $theme-primary: #3549af;
 $theme-bg: #f9f9f9;
-$theme-card-bg: #D8D8D8;
-$theme-text-primary: #707070;
-$theme-text-secondary: #707070;
-$theme-text-light: #343434;
+$theme-gray: #707070;
+$theme-text-dark: #8e8e8e;
+$theme-text-light: #afafaf;
 $theme-badge: #f2799a;
 $theme-info: #f7a661;
 $theme-info-bg: #ffb100;
@@ -34,4 +33,5 @@ $theme-warning: #FF8238;
 $theme-success: #5cd029;
 $theme-danger: #d85252;
 $theme-badge-bg: #52B9F0;
+$theme-success-dark: #2DAC5E;
 
