--- a/assets/sass/custom/components/_badge.scss
+++ b/assets/sass/custom/components/_badge.scss
@@ -2,37 +2,50 @@
 // ## BADGES.SCSS ## //
 // ######################################## //
 
+.badge-primary {
+  background: $theme-primary;
+  color: $white;
+}
 
-.bltri {
+.badge-seller {
   position: relative;
-  background: #5cd029;
-  color: white;
+  background: $theme-success;
+  color: $white;
   font-size: 16px;
   font-weight: 500;
   padding: 5px 20px;
   width: 150px;
   text-transform: uppercase;
+
+  &:before {
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 100%;
+    left: 0px;
+    border-top: 15px solid $theme-success-dark;
+    border-left: 15px solid transparent;
+  }
+  
+  &:after {
+    content: '';
+    position: absolute;
+    height: 0;
+    width: 0;
+    top: 0px;
+    right: -3px;
+    border-bottom: 30px solid white;
+    border-left: 8px solid #2DAC5E;
+    transform: rotateZ(15deg);
+  }
 }
 
-.bltri:before {
-  content: '';
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: 100%;
-  left: 0px;
-  border-top: 15px solid #2DAC5E;
-  border-left: 15px solid transparent;
+// badge text
+.badge-text {
+  font-size: 10px;
+  font-weight: 700;
+  padding: 5px 12px;
+  margin-right: 5px;
 }
 
-.bltri:after {
-  content: '';
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: 0px;
-  right: -3px;
-  border-bottom: 30px solid white;
-  border-left: 8px solid #2DAC5E;
-  transform: rotateZ(15deg);
-}
