--- a/assets/sass/custom/layout/_header.scss
+++ b/assets/sass/custom/layout/_header.scss
@@ -17,9 +17,12 @@
 .navbar-logo {
     width: 90px;
 }
+
+// toggle
 .navbar-toggler {
     border: none;
 
+    // on focus
     &:focus {
         outline: none;
     }
@@ -106,6 +109,12 @@
             width: auto;
             padding: 0;
         }
+
+        // on focus
+        &:focus {
+            outline: none;
+            box-shadow: none;
+        }
     }
 
     // notification icon
@@ -113,7 +122,7 @@
 
         // icon
         i {
-            font-size: 20px;
+            font-size: 26px;
             color: $gray-7;
         }
     }
@@ -136,9 +145,6 @@
         background-repeat: no-repeat;
         background-position: center; 
     }
-
-    // dropdown
-    .dropdown {}
 
     // toggle
     .dropdown-toggle {
