--- a/assets/sass/custom/components/_buttons.scss
+++ b/assets/sass/custom/components/_buttons.scss
@@ -1,3 +1,14 @@
 // ######################################## //
 // ## BUTTONS.SCSS ## //
 // ######################################## //
+
+// btn primry
+.btn-primary {
+  background: $theme-primary;
+  color: $white;
+  padding: 8px 18px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  border: none;
+}
