--- a/assets/sass/custom/components/_badge.scss
+++ b/assets/sass/custom/components/_badge.scss
@@ -2,11 +2,18 @@
 // ## BADGES.SCSS ## //
 // ######################################## //
 
+// .badge
+.badge {
+  position: relative;
+}
+
+// primary badge
 .badge-primary {
   background: $theme-primary;
   color: $white;
 }
 
+// seller badge
 .badge-seller {
   position: relative;
   background: $theme-success;
@@ -17,6 +24,7 @@
   width: 150px;
   text-transform: uppercase;
 
+  // before
   &:before {
     content: '';
     position: absolute;
@@ -28,6 +36,7 @@
     border-left: 15px solid transparent;
   }
   
+  // after
   &:after {
     content: '';
     position: absolute;
@@ -47,5 +56,63 @@
   font-weight: 700;
   padding: 5px 12px;
   margin-right: 5px;
+}
+
+// blink badge
+.badge-blink {
+  left: 50%;
+  background: $white;
+  width: 160px;
+  font-size: 14px;
+  text-transform: capitalize;
+  color: #acacac;
+  font-weight: 700;
+  text-align: left;
+  padding: 12px 27px;
+  border-radius: 4px;
+
+  // On mobile
+  @include mobile {
+    left: 30%;
+  }
+
+    // badge
+  .badge {
+    position: relative;
+  }
+
+  // circle
+  .circle {
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    opacity: .25;
+  }
+
+  // color
+  .red {
+    background-color: $theme-badge;
+    position: absolute;
+    top: 10px;
+    right: 27px;
+    -webkit-animation: up-right 2s infinite;
+    -moz-animation: up-right 2s infinite;
+    -o-animation: up-right 2s infinite;
+    animation: up-right 2s infinite;
+
+    // before
+    &:before {
+      content: '';
+      border-radius: 50%;
+      position: absolute;
+      border: 1px dotted $theme-badge;
+      top: -3px;
+      left: -3px;
+      right: -3px;
+      bottom: -3px;
+      background: transparent;
+      z-index: -1;
+    }
+  }
 }
 
