--- a/assets/sass/custom/pages/_home.scss
+++ b/assets/sass/custom/pages/_home.scss
@@ -25,6 +25,11 @@
     width: 100%;
     height: 80px;
     background: rgba($theme-primary, 0.1);
+
+    // On mobile
+    @include mobile {
+      height: 110px;
+    }
   }
 
 }
@@ -34,11 +39,12 @@
   position: relative;
   border: none;
   background: $white;
-  padding: 43px 37px;
+  padding: 20px 30px;
 
   // On mobile
   @include mobile {
     padding: 15px 30px;
+    margin-top: 20px;
    }
 
   // body
@@ -99,7 +105,7 @@
 
   // title
   .card-title {
-    font-size: 30px;
+    font-size: 25px;
     color: $black;
     font-weight: 700;
     margin-bottom: 2px; 
@@ -123,8 +129,9 @@
     // form control
     .form-control {
       border: 2px solid $theme-primary;
-      width: 80px;
+      width: 70px;
       color: $theme-primary;
+      height: 35px !important;
     }
 
     // container1
