--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7063,7 +7063,8 @@ a.text-dark:hover, a.text-dark:focus {
   margin-right: 5px; }
 
 .badge-blink {
-  left: 50%;
+  position: absolute;
+  left: 54%;
   background: #ffffff;
   width: 160px;
   font-size: 14px;
@@ -7075,7 +7076,8 @@ a.text-dark:hover, a.text-dark:focus {
   border-radius: 4px; }
   @media (max-width: 767px) {
     .badge-blink {
-      left: 30%; } }
+      left: 30%;
+      top: -1%; } }
   .badge-blink .badge {
     position: relative; }
   .badge-blink .circle {
@@ -10946,15 +10948,19 @@ html {
     width: 100%;
     height: 80px;
     background: rgba(53, 73, 175, 0.1); }
+    @media (max-width: 767px) {
+      .bg-bluestrip:before {
+        height: 110px; } }
 
 .card-search {
   position: relative;
   border: none;
   background: #ffffff;
-  padding: 43px 37px; }
+  padding: 20px 30px; }
   @media (max-width: 767px) {
     .card-search {
-      padding: 15px 30px; } }
+      padding: 15px 30px;
+      margin-top: 20px; } }
   .card-search .card-body {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -11003,7 +11009,7 @@ html {
     color: #afafaf;
     margin-bottom: 2px; }
   .card-search .card-title {
-    font-size: 30px;
+    font-size: 25px;
     color: #000000;
     font-weight: 700;
     margin-bottom: 2px; }
@@ -11019,8 +11025,9 @@ html {
         justify-content: center; } }
     .card-search .select-box .form-control {
       border: 2px solid #3549af;
-      width: 80px;
-      color: #3549af; }
+      width: 70px;
+      color: #3549af;
+      height: 35px !important; }
     .card-search .select-box .container1 {
       margin-right: 20px; }
   @media (max-width: 767px) {
