--- a/assets/sass/custom/layout/_header.scss
+++ b/assets/sass/custom/layout/_header.scss
@@ -55,7 +55,7 @@
         width: 100px;
 
         // focus
-        &:focus {
+        &:focus, &:hover {
             outline: none;
             box-shadow: none;
         }
@@ -73,6 +73,18 @@
         flex: 1;
         border-radius: 0;
         border-width: 1px 1px 1px 0;
+
+        // focus
+        &:focus, &:hover {
+            outline: none;
+            box-shadow: none;
+            border-color: $theme-primary; 
+        }
+    }
+
+    // input group
+    .input-group-append {
+        margin-left: 0px;
     }
 
     // icon
@@ -81,6 +93,16 @@
         background: transparent;
         padding: 0 12px;
         color: $gray-7;
+        border-left: 0;
+
+        // focus
+        &:focus, &:hover {
+            outline: none;
+            box-shadow: none;
+            border-color: none; 
+            background: rgba($theme-primary, 0.15);
+            transition: all 0.2s ease-in-out;
+        }
     }
 }
 
