--- a/assets/sass/custom/styles.scss
+++ b/assets/sass/custom/styles.scss
@@ -15,6 +15,7 @@
 @import "components/badge";
 @import "components/cards";
 @import "components/animation";
+@import "components/toggle";
 
 // Extras
 @import "layout/xtras";
