--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7020,6 +7020,18 @@ a.text-dark:hover, a.text-dark:focus {
   .btn-primary:hover, .btn-primary:focus {
     background: rgba(53, 73, 175, 0.9); }
 
+.btn-success {
+  background: #5cd029;
+  color: #ffffff;
+  padding: 8px 18px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 2px;
+  border: none; }
+  .btn-success:hover, .btn-success:focus {
+    background: rgba(92, 208, 41, 0.9); }
+
 .badge {
   position: relative; }
 
@@ -7135,6 +7147,60 @@ a.text-dark:hover, a.text-dark:focus {
     -webkit-transform: scale(1);
     transform: scale(1);
     opacity: .25; } }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 10px; }
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0; }
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #707070;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s; }
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  right: 18px;
+  bottom: -4px;
+  background-color: #3549af;
+  -webkit-transition: .4s;
+  -o-transition: .4s;
+  transition: .4s; }
+
+input:checked + .slider {
+  background-color: gray; }
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px gray;
+  box-shadow: 0 0 1px gray; }
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px); }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px; }
+
+.slider.round:before {
+  border-radius: 50%; }
 
 .m--0 {
   margin: 0px; }
