--- a/assets/sass/custom/components/_buttons.scss
+++ b/assets/sass/custom/components/_buttons.scss
@@ -17,3 +17,21 @@
     background: rgba($theme-primary, 0.9);
   }
 }
+
+// btn success
+.btn-success {
+  background: $theme-success;
+  color: $white;
+  padding: 8px 18px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 2px;
+  border: none;
+
+  // hover, focus
+  &:hover, &:focus {
+    background: rgba($theme-success, 0.9);
+  }
+}
+
