--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7151,8 +7151,9 @@ a.text-dark:hover, a.text-dark:focus {
 .switch {
   position: relative;
   display: inline-block;
-  width: 35px;
-  height: 10px; }
+  width: 16px;
+  height: 7px;
+  margin-bottom: 0; }
 
 .switch input {
   opacity: 0;
@@ -7166,7 +7167,7 @@ a.text-dark:hover, a.text-dark:focus {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #707070;
+  background-color: #afafaf;
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s; }
@@ -7174,9 +7175,9 @@ a.text-dark:hover, a.text-dark:focus {
 .slider:before {
   position: absolute;
   content: "";
-  height: 20px;
-  width: 20px;
-  right: 18px;
+  height: 15px;
+  width: 15px;
+  right: 13px;
   bottom: -4px;
   background-color: #3549af;
   -webkit-transition: .4s;
@@ -7184,11 +7185,11 @@ a.text-dark:hover, a.text-dark:focus {
   transition: .4s; }
 
 input:checked + .slider {
-  background-color: gray; }
+  background-color: #3549af; }
 
 input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px gray;
-  box-shadow: 0 0 1px gray; }
+  -webkit-box-shadow: 0 0 1px #afafaf;
+  box-shadow: 0 0 1px #afafaf; }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
@@ -11184,6 +11185,133 @@ html {
     .card-search .card-footer .services-sec {
       padding: 0 2px 0 5px;
       border-bottom: 1px dashed #8e8e8e; }
+
+.filter-navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+  .filter-navbar .left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    .filter-navbar .left .result-text {
+      font-size: 18px;
+      font-weight: 700;
+      color: #000000;
+      margin-right: 20px; }
+    .filter-navbar .left .gray-text {
+      color: #afafaf; }
+    .filter-navbar .left .info-sec {
+      background: rgba(255, 177, 0, 0.097);
+      padding: 5px 10px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; }
+      .filter-navbar .left .info-sec i {
+        font-size: 16px;
+        color: #f7a661;
+        line-height: 1;
+        margin-right: 5px; }
+      .filter-navbar .left .info-sec .info-text {
+        font-size: 12px;
+        color: #f7a661;
+        font-weight: 700; }
+  .filter-navbar .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    .filter-navbar .right .form-group {
+      margin-right: 20px; }
+    .filter-navbar .right .filter-heading {
+      margin-bottom: 0;
+      font-size: 12px;
+      font-weight: 700;
+      color: #afafaf; }
+      .filter-navbar .right .filter-heading.dark-text {
+        color: #8e8e8e; }
+    .filter-navbar .right .toggle {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; }
+    .filter-navbar .right .toggle-text {
+      font-size: 16px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #707070;
+      margin-right: 15px; }
+    .filter-navbar .right .filter-select {
+      font-size: 15px;
+      font-weight: 700;
+      color: #707070;
+      text-transform: uppercase;
+      border: none;
+      background: transparent;
+      height: auto !important; }
+      .filter-navbar .right .filter-select:focus, .filter-navbar .right .filter-select:hover {
+        -webkit-box-shadow: none;
+        box-shadow: none; }
+      .filter-navbar .right .filter-select.liner {
+        width: 200px;
+        overflow: hidden;
+        white-space: nowrap;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis; }
+    .filter-navbar .right .with-border {
+      border-width: 0 1px 0 0;
+      border-style: solid;
+      border-color: #afafaf;
+      border-radius: 0;
+      padding-right: 20px; }
+    .filter-navbar .right .list-view {
+      margin-right: 15px; }
+      .filter-navbar .right .list-view i {
+        font-size: 34px;
+        color: #afafaf; }
+      .filter-navbar .right .list-view.vertical {
+        -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        transform: rotate(90deg); }
+
+.card-result-found .card-header {
+  background: none;
+  border: none; }
+  .card-result-found .card-header .img-logo {
+    background-color: white;
+    background-position: center;
+    background-size: contain;
+    width: 390px;
+    height: 90px;
+    background-repeat: no-repeat; }
 
 /*!
  * animate.css -http://daneden.me/animate
