--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7041,12 +7041,15 @@ a.text-dark:hover, a.text-dark:focus {
 
 .badge-seller {
   position: relative;
+  left: -14px;
+  top: 32px;
+  z-index: 1;
   background: #5cd029;
   color: #ffffff;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 5px 20px;
-  width: 150px;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 6px 20px;
+  width: 130px;
   text-transform: uppercase; }
   .badge-seller:before {
     content: '';
@@ -11196,6 +11199,12 @@ html {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between; }
+  @media (max-width: 767px) {
+    .filter-navbar {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
   .filter-navbar .left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -11206,6 +11215,9 @@ html {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between; }
+    @media (max-width: 767px) {
+      .filter-navbar .left {
+        margin-bottom: 20px; } }
     .filter-navbar .left .result-text {
       font-size: 18px;
       font-weight: 700;
@@ -11244,8 +11256,34 @@ html {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between; }
+    @media (max-width: 767px) {
+      .filter-navbar .right {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; } }
+    .filter-navbar .right .left-sec {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+    .filter-navbar .right .right-sec {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      @media (max-width: 767px) {
+        .filter-navbar .right .right-sec {
+          width: 100%; } }
     .filter-navbar .right .form-group {
       margin-right: 20px; }
+      @media (max-width: 767px) {
+        .filter-navbar .right .form-group {
+          margin-right: 0; } }
     .filter-navbar .right .filter-heading {
       margin-bottom: 0;
       font-size: 12px;
@@ -11253,6 +11291,11 @@ html {
       color: #afafaf; }
       .filter-navbar .right .filter-heading.dark-text {
         color: #8e8e8e; }
+      .filter-navbar .right .filter-heading.pl--mob {
+        padding-left: 8px; }
+        @media (max-width: 767px) {
+          .filter-navbar .right .filter-heading.pl--mob {
+            padding-left: 17px; } }
     .filter-navbar .right .toggle {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -11269,6 +11312,9 @@ html {
       text-transform: uppercase;
       color: #707070;
       margin-right: 15px; }
+      @media (max-width: 767px) {
+        .filter-navbar .right .toggle-text {
+          font-size: 13px; } }
     .filter-navbar .right .filter-select {
       font-size: 15px;
       font-weight: 700;
@@ -11301,17 +11347,49 @@ html {
         -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
         transform: rotate(90deg); }
+        @media (max-width: 767px) {
+          .filter-navbar .right .list-view.vertical {
+            margin-left: 20px; } }
 
-.card-result-found .card-header {
-  background: none;
-  border: none; }
-  .card-result-found .card-header .img-logo {
-    background-color: white;
-    background-position: center;
-    background-size: contain;
-    width: 390px;
-    height: 90px;
-    background-repeat: no-repeat; }
+.card-result-found {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  border: none;
+  -webkit-box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 9px 0 rgba(0, 0, 0, 0.2); }
+  @media (max-width: 767px) {
+    .card-result-found {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; } }
+  .card-result-found .card-header {
+    background: none;
+    border: none; }
+    .card-result-found .card-header .img-logo {
+      background-color: white;
+      background-position: center;
+      background-size: contain;
+      width: 170px;
+      height: 90px;
+      background-repeat: no-repeat; }
+      @media (max-width: 767px) {
+        .card-result-found .card-header .img-logo {
+          width: 200px; } }
+  @media (max-width: 767px) {
+    .card-result-found .card-footer {
+      width: 100%; } }
 
 /*!
  * animate.css -http://daneden.me/animate
