--- a/assets/sass/custom/components/_badge.scss
+++ b/assets/sass/custom/components/_badge.scss
@@ -16,12 +16,15 @@
 // seller badge
 .badge-seller {
   position: relative;
+  left: -14px;
+  top: 32px;
+  z-index: 1;
   background: $theme-success;
   color: $white;
-  font-size: 16px;
-  font-weight: 500;
-  padding: 5px 20px;
-  width: 150px;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 6px 20px;
+  width: 130px;
   text-transform: uppercase;
 
   // before
